@startuml SmartGreenhouseMonitoringSystem

title Smart Greenhouse Monitoring System

' --- Styling -----------------------------------------------------
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam classFontName Helvetica
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam padding 4
skinparam roundCorner 6
skinparam shadowing false

skinparam class {
  BackgroundColor #FAFAFA
  BorderColor     #333333
  HeaderBackgroundColor #E8EEF7
}
skinparam package {
  BackgroundColor #FFFFFF
  BorderColor     #888888
  FontStyle       bold
}
skinparam note {
  BackgroundColor #FFF8DC
  BorderColor     #BDB76B
}
hide circle


' --- Application layer -------------------------------------------
package "application" as APP {

  class Main {
    - {static} CSV_FILE : String
    ..
    + {static} main(args : String[]) : void
  }

  class Menu {
    - {static} CSV_FILE : String
    - consoleInputReader : BufferedReader
    - loadedReadings    : SensorArray
    ..
    + Menu(loadedReadings : SensorArray)
    + run() : void
    .. menu screens ..
    - showStartupBanner() : void
    - showMainMenu() : void
    - showGoodbyeBanner() : void
    .. option handlers ..
    - handleOverallStats() : void
    - handleStatsByZone() : void
    - handleStatsByType() : void
    - handleAddReading() : void
    - handleDeleteReading() : void
    - showStatsSubMenu(slice : SensorArray, label : String) : void
    .. input helpers ..
    - readLineFromConsole(prompt : String) : String
    - readIntegerInRange(prompt : String, min : int, max : int) : int
    - readDoubleNumber(prompt : String) : double
    - readNonEmptyString(prompt : String) : String
    - readValidSensorType() : String
  }
}


' --- Logging layer -----------------------------------------------
package "logging" as LOG {

  class Logger <<static>> {
    - {static} LOG_FILE_NAME : String
    - {static} logFileWriter : BufferedWriter
    ..
    + {static} open() : void
    + {static} log(messageToLog : String) : void
    + {static} logBlank() : void
    + {static} logSeparator() : void
    + {static} close() : void
  }
}


' --- Data model layer --------------------------------------------
package "data model" as MODEL {

  class SensorArray {
    - {static} INITIAL_CAPACITY       : int = 100
    - {static} CAPACITY_GROWTH_FACTOR : int = 2
    - readings         : SensorReading [ ]
    - numberOfReadings : int
    ..
    + SensorArray()
    .. storage ..
    + add(newReading : SensorReading) : void
    + deleteAt(index : int) : void
    + get(index : int) : SensorReading
    + getCount() : int
    + totalReadings() : int
    .. filters ..
    + filterByZone(zone : String) : SensorArray
    + filterBySensorType(type : String) : SensorArray
    .. statistics ..
    + average() : double
    + minimum() : double
    + maximum() : double
    + outOfRangeCount() : int
    + outOfRangePercent() : double
    .. distinct values ..
    + getDistinctZones() : String [ ]
    + getDistinctTypes() : String [ ]
    - getUniqueValues(values : String [ ]) : String [ ]
    - growArray() : void
  }

  class SensorReading {
    - sensorID   : String
    - sensorType : String
    - zone       : String
    - value      : double
    - timestamp  : Timestamp
    ..
    + SensorReading()
    + SensorReading(sensorID, sensorType, zone, value, timestamp)
    + SensorReading(source : SensorReading)
    .. accessors ..
    + getSensorID()   : String
    + getSensorType() : String
    + getZone()       : String
    + getValue()      : double
    + getTimestamp()  : Timestamp
    .. mutators ..
    + setSensorID(id : String)       : void
    + setSensorType(type : String)   : void
    + setZone(zone : String)         : void
    + setValue(value : double)       : void
    + setTimestamp(ts : Timestamp)   : void
    .. safe-range logic ..
    - {static} getSafeRange(type : String) : double [ ]
    + isOutOfRange() : boolean
    + toString() : String
  }

  class Timestamp <<package-private>> {
    - dayOfMonth  : int
    - monthOfYear : int
    - year        : int
    - hour        : int
    - minute      : int
    ..
    + Timestamp()
    + Timestamp(day, month, year, hour, minute)
    + Timestamp(source : Timestamp)
    .. accessors ..
    + getDayOfMonth()  : int
    + getMonthOfYear() : int
    + getYear()        : int
    + getHour()        : int
    + getMinute()      : int
    .. mutators ..
    + setDayOfMonth(d : int)  : void
    + setMonthOfYear(m : int) : void
    + setYear(y : int)        : void
    + setHour(h : int)        : void
    + setMinute(m : int)      : void
    .. formatting ..
    + toString() : String
    - padWithLeadingZero(n : int) : String
  }
}


' --- Persistence layer -------------------------------------------
package "persistence" as PERSIST {

  class GreenhouseDataStorage <<static>> {
    ..
    + {static} loadCSV(filename : String) : SensorArray
    + {static} saveCSV(filename : String, readings : SensorArray) : void
    - {static} parseLine(line : String) : SensorReading
    - {static} splitCSV(line : String) : String [ ]
  }

  class Validator <<package-private static>> {
    - {static} VALID_SENSOR_TYPES   : String [ ]
    - {static} MIN_DAY .. MAX_DAY       : int = 1 .. 31
    - {static} MIN_MONTH .. MAX_MONTH   : int = 1 .. 12
    - {static} MIN_YEAR .. MAX_YEAR     : int = 2000 .. 2100
    - {static} MIN_HOUR .. MAX_HOUR     : int = 0 .. 23
    - {static} MIN_MINUTE .. MAX_MINUTE : int = 0 .. 59
    ..
    + {static} isValidSensorType(type : String) : boolean
    + {static} isValidZone(zone : String)       : boolean
    + {static} isValidSensorID(id : String)     : boolean
    + {static} isValidDay(day : int)            : boolean
    + {static} isValidMonth(month : int)        : boolean
    + {static} isValidYear(year : int)          : boolean
    + {static} isValidHour(hour : int)          : boolean
    + {static} isValidMinute(minute : int)      : boolean
    + {static} isNumeric(s : String)            : boolean
    + {static} isInteger(s : String)            : boolean
  }
}


' --- Relationships -----------------------------------------------

' COMPOSITION (strong, solid diamond)
Menu          "1" *-- "1"    SensorArray    : loadedReadings
SensorArray   "1" *-- "0..*" SensorReading  : readings
SensorReading "1" *-- "1"    Timestamp      : timestamp

' Main entry-point dependencies
Main ..> Menu                  : <<creates>>
Main ..> Logger                : <<uses>>
Main ..> GreenhouseDataStorage : <<uses>>

' Menu collaborators (excluding what it composes)
Menu ..> Logger                : <<uses>>
Menu ..> GreenhouseDataStorage : <<uses>>
Menu ..> Validator             : <<uses>>

' Persistence collaborators
GreenhouseDataStorage ..> Validator   : <<uses>>
GreenhouseDataStorage ..> SensorArray : <<returns>>


' --- Layout hints (invisible edges to nudge packages) ------------
APP    -[hidden]down- MODEL
MODEL  -[hidden]down- PERSIST
APP    -[hidden]right- LOG


' --- Notes -------------------------------------------------------
note right of Timestamp
  Defined inside
  SensorReading.java
  (no public modifier)
end note

note right of Validator
  Defined inside
  GreenhouseDataStorage.java
  (no public modifier)
end note

note bottom of SensorArray
  Resizable container.
  Doubles capacity on overflow:
  size goes 100, 200, 400, ...
end note

@enduml
